[gd_scene load_steps=7 format=3 uid="uid://cp3ojvq5wa35u"]

[ext_resource type="Script" path="res://scenes/gameplay/shop.gd" id="1_e4be5"]
[ext_resource type="Texture2D" uid="uid://l4hs0p4tgk14" path="res://assets/models/creature/Textures/bottle3d.png" id="2_ckpm4"]
[ext_resource type="Texture2D" uid="uid://byniue2cdd2yv" path="res://scenes/gameplay/pause-layer/pause_button.png" id="2_x2q7f"]
[ext_resource type="Script" path="res://scenes/gameplay/bottle-panel.gd" id="3_7srtf"]
[ext_resource type="Theme" uid="uid://ducfept6pmkkm" path="res://resources/theme/theme-main.tres" id="3_sbxau"]
[ext_resource type="Texture2D" uid="uid://lv7np7ldl2fa" path="res://assets/models/creature/Textures/creatures-stack.png" id="4_3ptbv"]

[node name="ShopLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_e4be5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Control"]
layout_mode = 2
anchor_left = 0.947
anchor_right = 0.947
offset_left = -88.2831
offset_top = -241.0
offset_right = 260.717
offset_bottom = 1444.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="PauseButton" type="TextureButton" parent="MarginContainer/Control"]
visible = false
layout_mode = 1
offset_right = 42.0
offset_bottom = 42.0
size_flags_horizontal = 0
mouse_filter = 1
texture_normal = ExtResource("2_x2q7f")
ignore_texture_size = true
stretch_mode = 0

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.949
anchor_right = 0.949
offset_left = -85.4611
offset_top = 19.0
offset_right = 70.5389
offset_bottom = 611.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Panel" type="CenterContainer" parent="MarginContainer/Control/VBoxOptions"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 0
script = ExtResource("3_7srtf")

[node name="BottleSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel"]
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ckpm4")

[node name="CreatureSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel"]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3ptbv")

[node name="Panel2" type="CenterContainer" parent="MarginContainer/Control/VBoxOptions"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 0
script = ExtResource("3_7srtf")
type = 2

[node name="BottleSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel2"]
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ckpm4")

[node name="CreatureSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel2"]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3ptbv")

[node name="Panel3" type="CenterContainer" parent="MarginContainer/Control/VBoxOptions"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 0
script = ExtResource("3_7srtf")
type = 3

[node name="BottleSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel3"]
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ckpm4")

[node name="CreatureSprite" type="Sprite2D" parent="MarginContainer/Control/VBoxOptions/Panel3"]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(84, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3ptbv")

[node name="Label" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.024
anchor_top = -0.014
anchor_right = 1.024
anchor_bottom = -0.014
offset_left = -121.136
offset_top = -13.824
offset_right = -43.1361
offset_bottom = 14.176
grow_horizontal = 2
theme = ExtResource("3_sbxau")
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
text = "SHOP"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="creature_selected" from="MarginContainer/Control/VBoxOptions/Panel" to="." method="_on_panel_creature_selected"]
[connection signal="gui_input" from="MarginContainer/Control/VBoxOptions/Panel" to="MarginContainer/Control/VBoxOptions/Panel" method="_on_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/Control/VBoxOptions/Panel" to="MarginContainer/Control/VBoxOptions/Panel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/VBoxOptions/Panel" to="MarginContainer/Control/VBoxOptions/Panel" method="_on_mouse_exited"]
[connection signal="creature_selected" from="MarginContainer/Control/VBoxOptions/Panel2" to="." method="_on_panel_creature_selected"]
[connection signal="gui_input" from="MarginContainer/Control/VBoxOptions/Panel2" to="MarginContainer/Control/VBoxOptions/Panel2" method="_on_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/Control/VBoxOptions/Panel2" to="MarginContainer/Control/VBoxOptions/Panel2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/VBoxOptions/Panel2" to="MarginContainer/Control/VBoxOptions/Panel2" method="_on_mouse_exited"]
[connection signal="creature_selected" from="MarginContainer/Control/VBoxOptions/Panel3" to="." method="_on_panel_creature_selected"]
[connection signal="gui_input" from="MarginContainer/Control/VBoxOptions/Panel3" to="MarginContainer/Control/VBoxOptions/Panel3" method="_on_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/Control/VBoxOptions/Panel3" to="MarginContainer/Control/VBoxOptions/Panel3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/VBoxOptions/Panel3" to="MarginContainer/Control/VBoxOptions/Panel3" method="_on_mouse_exited"]
